service-mesh/bookinfo/templates/bookinfo.yaml
# Copyright 2017 Istio Authors
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.

##################################################################################################
# This file defines the services, service accounts, and deployments for the Bookinfo sample.
#
# To apply all 4 Bookinfo services, their corresponding service accounts, and deployments:
#
#   kubectl apply -f samples/bookinfo/platform/kube/bookinfo.yaml
#
# Alternatively, you can deploy any resource separately:
#
#   kubectl apply -f samples/bookinfo/platform/kube/bookinfo.yaml -l service=reviews # reviews Service
#   kubectl apply -f samples/bookinfo/platform/kube/bookinfo.yaml -l account=reviews # reviews ServiceAccount
#   kubectl apply -f samples/bookinfo/platform/kube/bookinfo.yaml -l app=reviews,version=v3 # reviews-v3 Deployment
##################################################################################################

##################################################################################################
# Details service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: details
  labels:
    app: details2
    service: details
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: details2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: details2-v1
  labels:
    app: details2
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: details2
      version: v1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: details2
        version: v1
    spec:
      serviceAccountName: bookinfo2-details
      containers:
      - name: details2
        image: maistra/examples-bookinfo-details-v1:1.2.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
---
##################################################################################################
# Ratings service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: ratings
  labels:
    app: ratings2
    service: ratings
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: ratings2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ratings2-v1
  labels:
    app: ratings2
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ratings2
      version: v1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: ratings2
        version: v1
    spec:
      serviceAccountName: bookinfo2-ratings
      containers:
      - name: ratings2
        image: maistra/examples-bookinfo-ratings-v1:1.2.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
---
##################################################################################################
# Reviews service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: reviews
  labels:
    app: reviews2
    service: reviews
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: reviews2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviews2-v1
  labels:
    app: reviews2
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reviews2
      version: v1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: reviews2
        version: v1
    spec:
      serviceAccountName: bookinfo2-reviews
      containers:
      - name: reviews2
        image: maistra/examples-bookinfo-reviews-v1:1.2.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviews2-v2
  labels:
    app: reviews2
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reviews2
      version: v2
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: reviews2
        version: v2
    spec:
      serviceAccountName: bookinfo2-reviews
      containers:
      - name: reviews2
        image: maistra/examples-bookinfo-reviews-v2:1.2.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviews2-v3
  labels:
    app: reviews2
    version: v3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reviews2
      version: v3
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: reviews2
        version: v3
    spec:
      serviceAccountName: bookinfo2-reviews
      containers:
      - name: reviews2
        image: maistra/examples-bookinfo-reviews-v3:1.2.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
---
##################################################################################################
# Productpage services
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: productpage
  labels:
    app: productpage2
    service: productpage
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: productpage2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productpage2-v1
  labels:
    app: productpage2
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: productpage2
      version: v1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: productpage2
        version: v1
    spec:
      serviceAccountName: bookinfo2-productpage
      containers:
      - name: productpage2
        image: maistra/examples-bookinfo-productpage-v1:1.2.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
---
