service-mesh/bookinfo/templates/virtual-service-reviews.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
  - reviews
  http:
    - match:
      - headers:
          end-user:
            exact: lniesz
      route:
      - destination:
          host: reviews
          subset: v3
        weight: 100
    - route:
        - destination:
            host: reviews
            subset: v1
          weight: 75
        - destination:
            host: reviews
            subset: v2
          weight: 25
